--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "node-fetch": "^2.6.7",
-    "@arcjet/node": "^1.0.0"
-
+    "@arcjet/node": "^1.0.0-beta.11"
   },
   "license": "MIT"
 }
