--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "shadow-priest-mop",
   "version": "1.0.0",
-  "description": "Shadow Priest Rankings site using Netlify Functions",
+  "description": "Shadow Priest Rankings site using Astro and Netlify",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start": "netlify dev"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "@arcjet/node": "^1.0.0-beta"
+    "@arcjet/astro": "^1.0.0",
+    "@astrojs/netlify": "^6.6.4",
+    "astro": "^5.0.0",
+    "node-fetch": "^2.6.7"
   },
   "license": "MIT"
 }
