--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "shadow-priest-mop",
   "version": "1.0.0",
   "description": "Shadow Priest Rankings site using Netlify Functions",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "netlify dev"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "@arcjet/node": "^1.0.0-beta"
+    "node-fetch": "^2.6.7"
   },
   "license": "MIT"
 }
