--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [functions]
   directory = "netlify/functions"
 
+[functions."getLogs"]
+  timeout = 26
+
 [[redirects]]
   from = "/rankings"
   to = "/rankings.html"
